--- a/.github/workflows/aws.yaml
+++ b/.github/workflows/aws.yaml
@@ -18,4 +18,4 @@ jobs:
         aws-region: us-east-1
     
     - name: Sync to S3
-      run: aws s3 sync . s3://YOUR_BUCKET_NAME --exclude ".git*"
+      run: aws s3 sync . s3://brendon-it718-site-2026 --exclude ".git*"
